Prepare for release 1.15.2.